# miro-middleware-svn

branches/MiroMicro/botsvcs/: Makefile.am
tags/Beta3/dtd/: Makefile.am
tags/Beta3/performance-tests/: Makefile.am
tags/Release-2.0.0/: AUTHORS  Makefile.am  RELEASENOTES  bootstrap
tags/Release-2.0.0/config/: Make-rules  features_ace.m4  search_ace.m4
tags/Release-2.0.0/etc/: donald_onlyGreeBallLines.xml  speedy.xml  tick.xml  unicapExample.xml
tags/Release-2.0.0/examples/: Makefile.am
tags/Release-2.0.0/idl/: .cvsignore  BatteryEvent.idl  BehaviourEngine.idl  CanonCameraControl.idl  CtGps.idl  Exception.idl  Gripper.idl  Localization.idl  Motion.idl  PioneerMotion.idl  RangeEvent.idl  SonyCameraControl.idl  SphinxSpeech.idl  Stall.idl  SynchroMotion.idl  TCM2Event.idl  Thermometer.idl
tags/Release-2.0.0/tests/: Makefile.am
trunk/: .cvsignore  AUTHORS  CONFIG  CONFIGURATION  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  RELEASENOTES  aclocal.m4  all.h.sh  bootstrap  config.h.in  configure  configure.ac
trunk/botsvcs/: Makefile.am
trunk/botsvcs/BAP/: .cvsignore  ActionPattern.cpp  ActionPattern.h  Arbiter.cpp  Arbiter.h  ArbiterMessage.h  ArbiterParameters.h  ArbiterRepository.h  BAFactory.cpp  BAFactory.h  Behaviour.cpp  Behaviour.h  BehaviourEngineImpl.h  BehaviourParameters.cpp  BehaviourParameters.h  BehaviourRepository.cpp  BehaviourRepository.h  ConstraintArbiter.cpp  ConstraintArbiter.h  ConstraintArbiterParameters.cpp  ConstraintArbiterParameters.h  ConstraintArbiterViewer.cpp  ConstraintArbiterViewerTask.cpp  ConstraintArbiterViewerTask.h  EventBehaviour.cpp  Makefile.am  MotionArbiter.cpp  MotionArbiter.h  MotionArbiterMessage.cpp  Parameters.cpp  Parameters.h  Pattern.cpp  Pattern.h  Policy.cpp  Policy.h  PowerArbiter.cpp  PowerArbiter.h  PriorityArbiter.cpp  PriorityArbiter.h  TaskBehaviour.h  (+4 more)
trunk/botsvcs/MCL/: Feature.cpp  Feature.h  FeatureManagementI.cpp  FeatureManagementI.h  FeatureManager.cpp  FeatureManager.h  FeatureRepository.cpp  FeatureRepository.h  Makefile.am  MotionModelT.h  ObservationModelT.h  ParticleFilter.h  ParticleFilterT.cpp  Sample.h  SampleFactoryT.h  WorldModel.cpp  WorldModel.h
trunk/botsvcs/examples/: Makefile.am
trunk/botsvcs/tests/: Makefile.am
trunk/config/: .cvsignore  Make-rules  conditionals.m4  features_ace.m4  search_ace.m4  search_festival.m4  search_player.m4  search_qt.m4  search_speech.m4  search_sphinx.m4  search_tao.m4
trunk/doc/: Makefile.am  Makefile.in
trunk/doc/fig/: .cvsignore  Makefile.am  Makefile.in  Miro_behaviours.fig
trunk/doc/html/: .cvsignore  ACE.tag  Makefile  Makefile.am  Makefile.in  TAO.tag  doxygen.conf.tmpl  doxygen.cpp  doxygen.cpp.in  doxygen.idl  doxygen.idl.in
trunk/doc/tex/: .cvsignore  Makefile  Makefile.am  Makefile.in  behaviourEngine.tex  definitions.tex  doxygen.conf.tmpl  event_channel_logging.tex  group_communication.tex  install.tex  logging.tex  miro_manual.bib  miro_manual.tex  miro_reference.tex  new_project.tex  parameters.tex  servers.tex  styleguide.tex  tex_definitions.tex  video.tex  writing_a_client.tex
trunk/dtd/: Makefile.am  Makefile.in
trunk/etc/: B21Default.xml  BehaviourDescriptionFile.xml  Makefile.am  Makefile.in  PioneerDefault.xml  PlayerDefault.xml  PolicyEditorConfig.xml  PpbDefault.xml  SparrowDefault.xml  barney.xml  coyote.xml  donald.xml  eve.xml  flying-eagle.xml  gonzales.xml  haeltnix.xml  notifyLog.xml  passtnix.xml  pioneer1.xml  ppb.xml  roadrunner.xml  rosita.xml  siehtnix.xml  speedy.xml  stanright.xml  tick.xml  trifftnix.xml  unicapExample.xml
trunk/examples/: Makefile  Makefile.am  Makefile.in
trunk/examples/b21Behaviours/: LaserAvoid.cpp  LaserAvoid.h  Makefile  OnButton.cpp  OnButton.h  SonarAvoid.cpp  SonarAvoid.h  Straight.cpp  Straight.h  TurnRight.cpp  TurnRight.h  Wander.cpp  Wander.h
trunk/examples/b21Motion/: .cvsignore  Makefile.am  Makefile.in  SimpleBaseClient.cpp
trunk/examples/battery/: BatteryGet.cpp  Makefile  Makefile.am  Makefile.in
trunk/examples/behaviours/: .cvsignore  BehaviourControler.cpp  BehaviourParameters.xml  Behaviours.cpp  Makefile  Makefile.am  OnButton.cpp  OnButton.h  OnButtonParameters.cpp  OnButtonParameters.h  PpbStraight.xml  RangeSensorAvoid.cpp  RangeSensorAvoid.h  RangeSensorAvoidParameters.cpp  RangeSensorAvoidParameters.h  RangeSensorBehaviour.cpp  RangeSensorBehaviour.h  RangeSensorBehaviourParameters.cpp  RangeSensorBehaviourParameters.h  SparrowWallFollow.xml  Straight.cpp  Straight.h  StraightParameters.cpp  StraightParameters.h  TactileStop.cpp  TactileStop.h  WallFollow.cpp  WallFollow.h  WallFollowParameters.cpp  WallFollowParameters.h  Wander.cpp  Wander.h  WanderParameters.cpp  WanderParameters.h
trunk/examples/buttons/: .cvsignore  ButtonsNotify.cpp  ButtonsNotify.h  ButtonsPoll.cpp  Makefile  Makefile.am  Makefile.in
trunk/examples/gps/: CtGpsDemo.cpp  GpsPoll.cpp  (+3 more)
trunk/idl/: .cvsignore  ArbiterEvent.idl  B21Buttons.idl  B21Motion.idl  Battery.idl  BatteryEvent.idl  BehaviourEngine.idl  Buttons.idl  CameraControl.idl  CanonCamera.idl  CanonPanTilt.idl  Charger.idl  ClosedMotion.idl  Compass.idl  CompassEvent.idl  Config.idl  DifferentialMotion.idl  DirectedPerceptionPanTilt.idl  DistanceScan.idl  DtlkSpeech.idl  Exception.idl  FieldStrength.idl  FusedRangeSensor.idl  Gps.idl  GpsData.idl  Gripper.idl  Image.idl  Inclination.idl  Inclinometer.idl  InclinometerEvent.idl  InertialData.idl  InertialSensor.idl  InertialSensorEvent.idl  Joystick.idl  Laser.idl  Localization.idl  Magnetometer.idl  MagnetometerEvent.idl  Makefile.am  Makefile.in  (+32 more)
trunk/lib/: .cvsignore  Makefile.am  Makefile.in
trunk/pch/: Makefile.am
trunk/performance-tests/: Makefile  Makefile.am  Makefile.in
trunk/scripts/: Makefile.am  Makefile.in  doclinks_delete.sh
trunk/src/: Makefile  Makefile.am  Makefile.in
trunk/templates/: Makefile.am.dir  Makefile.am.qt  Makefile.dir  Makefile.qt  header-template-Makefile  header-template-cpp  header-template-idl  search_miro.m4
trunk/tests/: Makefile  Makefile.am  Makefile.in
trunk/utils/: Makefile  Makefile.am  Makefile.in
(+3926 files in other folders)
