## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 2003, 2004
## Department of Neural Information Processing, University of Ulm, Germany
##
## Miro/botsvcs/Makefile.am
##
##############################################################################

## insert unconditional directories here
generaldirs = \
	BAP \
	tests \
	examples

## example for conditional compilation
if COND_PIONEER
conditionaldirs = 
endif


SUBDIRS = $(generaldirs) $(conditionaldirs)


