## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 2003, 2004
## Department of Neural Information Processing, University of Ulm, Germany
##
## Miro/botsvcs/Makefile.am
##
##############################################################################

## insert unconditional directories here
generaldirs = \
	BAP \
	MCL \
	tests \
	examples

SUBDIRS = $(generaldirs)


