## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 1999, 2000, 2001
## Department of Neural Information Processing, University of Ulm, Germany
##
## $Id$
## $Date$
## 
##
## Miro/templates/Makefile.dir
##
##############################################################################

if COND_TEXDOC
texdocdirs = fig tex
endif

if COND_HTMLDOC
htmldocdirs = html
endif

SUBDIRS = $(texdocdirs) $(htmldocdirs)
