## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## (c) 1999, 2000, 2001, 2002, 2003
## Department of Neural Information Processing, University of Ulm, Germany
##
## $Id$
##
## Miro/etc/Makefile
##
##############################################################################

include $(top_srcdir)/config/Make-rules

data = \
	B21Default.xml \
	PioneerDefault.xml \
	PpbDefault.xml \
	SparrowDefault.xml \
	coyote.xml \
	gonzales.xml \
	eve.xml \
	roadrunner.xml \
	speedy.xml \
	sphinx.dic \
	sphinx.lm \
	stanleft.xml \
	stanright.xml

sysconf_DATA = $(data)

EXTRA_DIST = $(data)
