## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/etc/Makefile.am
##
##############################################################################


include $(top_srcdir)/config/Make-rules

data = \
	B21Default.xml \
	PioneerDefault.xml \
	PpbDefault.xml \
	SparrowDefault.xml \
	coyote.xml \
	gonzales.xml \
	eve.xml \
	roadrunner.xml \
	speedy.xml \
	sphinx.dic \
	sphinx.lm \
	stanleft.xml \
	stanright.xml

sysconf_DATA = $(data)

EXTRA_DIST = $(data)
