## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/lib/Makefile.am
##
##############################################################################


include $(top_srcdir)/config/Make-rules
